--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,10 +21,10 @@ services:
     working_dir: /var/www/root
     restart: always
   db:
-    platform: linux/x86_64 # M1チップ対応
+    platform: linux/x86_64 # Apple silicon チップ対応
     container_name: "${NAME_PREFIX}-mysql"
     hostname: ${DB_HOST_NAME}
-    image: mysql:8.0.32
+    image: mysql:8.0.36
     ports:
       - "${IP}:${PORT_DB}:3306"
     volumes:
